[project]
name = "pywrappers"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jgonzg@proton.me" },
]
description = "Collection of wrappers and decorators to be used in python development."
dependencies = [
    
]
requires-python = ">=3.9"
license = { text = "MIT license" }
dynamic = ["readme", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "http://github/Jtachan/PyWrappers.git"
# Documentation = "https://readthedocs.org"

# [project.scripts]
# cli-command = "pkg_name.module:function"

# [project.optional-dependencies]
# dev = ["ruff", "pytest", "mkdocs-material"]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "py_wraps._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]
